--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reveal.js",
-  "version": "2.6.0-dev",
+  "version": "2.6.1",
   "description": "The HTML Presentation Framework",
   "homepage": "http://lab.hakim.se/reveal-js",
   "subdomain": "revealjs",
@@ -23,7 +23,7 @@
   "dependencies": {
     "underscore": "~1.5.1",
     "express": "~2.5.9",
-    "mustache": "~0.7.2",
+    "mustache": "~2.3.0",
     "socket.io": "~0.9.13"
   },
   "devDependencies": {
